--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "math-birthday",
-  "version": "0.0.0",
+  "name": "datepicker",
+  "version": "1.0.7",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,21 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.9",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "bootstrap": "4.0.0-beta.2"
   },
   "devDependencies": {
     "@angular/cli": "1.5.4",
