--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0-beta.2"
+    "bootstrap": "^4.0.0"
   },
   "devDependencies": {
     "@angular/cli": "1.5.4",
